/*
 * Copyright OpenSearch Contributors
 * SPDX-License-Identifier: Apache-2.0
 */

import React from 'react';
import { configure, mount } from 'enzyme';
import Adapter from 'enzyme-adapter-react-16';
import { ServiceConfig } from '../components/config_components/service_config';
import { coreStartMock } from '../../../../test/__mocks__/coreMocks';
import DSLService from 'public/services/requests/dsl';

describe('Service Config component', () => {
  configure({ adapter: new Adapter() });

  it('renders empty service config', () => {
    const core = coreStartMock;
    const setQuery = jest.fn();
    const setFilters = jest.fn();
    const setStartTime = jest.fn();
    const setEndTime = jest.fn();
    const setSelectedServices = jest.fn();
    const dslService = {
      http: jest.fn(),
      fetch: jest.fn(),
      fetchIndices: jest.fn(),
      fetchFields: jest.fn()
    } as unknown as DSLService;
    const wrapper = mount(
      <ServiceConfig
        http={core.http}
        chrome={core.chrome}
        parentBreadcrumb={{ text: 'test', href: 'test#/' }}
        query=""
        setQuery={setQuery}
        filters={[]}
        setFilters={setFilters}
        startTime="now-5m"
        setStartTime={setStartTime}
        endTime="now"
        setEndTime={setEndTime}
        indicesExist={true} 
        dslService={dslService}
        selectedServices={[]}
        setSelectedServices={setSelectedServices}
        />
    );

    expect(wrapper).toMatchSnapshot();
  });

  it('renders with one service selected', () => {
    const core = coreStartMock;
    const setQuery = jest.fn();
    const setFilters = jest.fn();
    const setStartTime = jest.fn();
    const setEndTime = jest.fn();
    const setSelectedServices = jest.fn();
    const dslService = {
      http: jest.fn(),
      fetch: jest.fn(),
      fetchIndices: jest.fn(),
      fetchFields: jest.fn()
    } as unknown as DSLService;
    const serviceFilter = [{
      field: 'serviceName',
      operator: 'is',
      value: 'User',
      inverted: false, 
      disabled: false 
    }];
    const wrapper = mount(
      <ServiceConfig
        http={core.http}
        chrome={core.chrome}
        parentBreadcrumb={{ text: 'test', href: 'test#/' }}
        query=""
        setQuery={setQuery}
        filters={serviceFilter}
        setFilters={setFilters}
        startTime="now-5m"
        setStartTime={setStartTime}
        endTime="now"
        setEndTime={setEndTime}
        indicesExist={true} 
        dslService={dslService}
        selectedServices={[]}
        setSelectedServices={setSelectedServices}
        />
    );

    expect(wrapper).toMatchSnapshot();
  });
});
